투표 디자인 앤나 기타 디자인

--- a/app/src/main/res/layout/activity_data_add.xml
+++ b/app/src/main/res/layout/activity_data_add.xml
@@ -32,6 +32,8 @@
         android:id="@+id/editAdd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:backgroundTint="@color/textColor"
         android:hint="내용"/>
 
 </LinearLayout>
