--- a/app/src/main/res/layout/activity_balance_add.xml
+++ b/app/src/main/res/layout/activity_balance_add.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="💗항목1"
+            android:text="💗 항목1"
             android:textSize="20sp"
             android:textStyle="bold"/>
         <EditText
@@ -24,18 +24,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="내용"
+            android:paddingStart="10dp"
+            android:backgroundTint="@color/textColor"
             android:layout_marginBottom="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="💗항목2"
+            android:text="💗 항목2"
             android:textSize="20sp"
             android:textStyle="bold"/>
         <EditText
             android:id="@+id/editBalance2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/textColor"
+            android:paddingStart="10dp"
             android:hint="내용"/>
     </LinearLayout>
 
