--- a/app/src/main/res/layout/activity_balance_game.xml
+++ b/app/src/main/res/layout/activity_balance_game.xml
@@ -13,12 +13,15 @@
         android:id="@+id/voteLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="vertical">
         <!-- 게시자 사진, 이름, 게시물 작성시간 -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:padding="5dp">
+            android:layout_height="40dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/balanceImage"
                 android:layout_width="30dp"
@@ -44,6 +47,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:text="작성시간"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/textColor"
                 android:textSize="15sp" />
         </RelativeLayout>
@@ -54,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center_vertical"
-            android:padding="5dp"
+            android:padding="10dp"
             android:text="밸겜 타이틀"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -63,25 +67,32 @@
         <LinearLayout
             android:id="@+id/frameVote"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@color/receiveMessage"
+            android:layout_height="wrap_content"
+            android:background="#80E4E4E4"
+            android:padding="30dp"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="10dp"
             android:visibility="visible">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="투표 후 결과 확인이 가능해용" />
+                android:layout_marginBottom="5dp"
+                android:text="투표를 하면 결과 확인이 가능해요!" />
             <Button
                 android:id="@+id/voteBtn1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/textColor"
+                android:textColor="@color/white"
+                android:layout_marginBottom="5dp"
                 android:text="항목1" />
             <Button
                 android:id="@+id/voteBtn2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/textColor"
+                android:textColor="@color/white"
                 android:text="항목2" />
         </LinearLayout>
 
@@ -90,25 +101,24 @@
         <LinearLayout
             android:id="@+id/frameVoteResult"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@color/receiveMessage"
+            android:layout_height="wrap_content"
+            android:background="#80E4E4E4"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="10dp"
+            android:padding="30dp"
             android:visibility="gone">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="투표결과"/>
-            <TextView
-                android:id="@+id/voteCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="전체 투표 수"/>
+                android:text="💗 투표결과 💗"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp"/>
             <TextView
                 android:id="@+id/voteContent1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="항목1"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -124,6 +134,7 @@
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:progressTint="@color/pink"
                     android:max="10"
                     android:progress="0"/>
             </LinearLayout>
@@ -132,6 +143,8 @@
                 android:id="@+id/voteContent2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
                 android:text="항목2"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -147,9 +160,16 @@
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:progressTint="@color/pink"
                     android:max="10"
                     android:progress="0"/>
             </LinearLayout>
+            <TextView
+                android:id="@+id/voteCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="👤"
+                android:layout_gravity="right"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -166,7 +186,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/pink"
-            android:padding="5dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="10dp"
             android:text="댓글"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -182,21 +204,30 @@
     <LinearLayout
         android:id="@+id/editLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/login_border"
+        android:paddingStart="20dp"
+        android:drawablePadding="10dp"
+        android:paddingEnd="20dp"
+        android:layout_margin="5dp"
+        android:gravity="center">
         <EditText
             android:id="@+id/editComment"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="9"
-            android:hint="댓글을 입력하세요.." />
-        <Button
+            android:paddingStart="8dp"
+            android:background="@android:color/transparent"
+            android:hint="댓글을 입력하세요." />
+        <ImageButton
             android:id="@+id/btnSend"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="작성" />
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="0.8"
+            android:background="@drawable/comment_gray"/>
     </LinearLayout>
 
 
