--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,8 +11,8 @@
         android:id="@+id/profile_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_user"
-        android:background="@color/black"
+        android:src="@drawable/profile_icon_pink"
+        android:background="@color/white"
         android:scaleType="centerCrop"/>
 
     <LinearLayout
