--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,13 +22,15 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/profile" />
+                android:src="@drawable/profile_icon_pink" />
 
             <EditText
                 android:id="@+id/edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="이메일"
+                android:paddingStart="10dp"
+                android:backgroundTint="@color/textColor"
                 android:inputType="textEmailAddress" />
 
             <EditText
@@ -36,24 +38,32 @@
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="비밀번호" />
+                android:hint="비밀번호"
+                android:backgroundTint="@color/textColor"
+                android:paddingStart="10dp" />
 
             <EditText
                 android:id="@+id/edit_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="이름" />
+                android:hint="이름"
+                android:backgroundTint="@color/textColor"
+                android:paddingStart="10dp"/>
 
             <EditText
                 android:id="@+id/edit_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="나이" />
+                android:paddingStart="10dp"
+                android:hint="나이"
+                android:backgroundTint="@color/textColor" />
 
             <EditText
                 android:id="@+id/edit_introduction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:backgroundTint="@color/textColor"
                 android:hint="상태메세지 작성" />
 
             <RadioGroup
