--- a/app/src/main/res/layout/item_chatroomlist.xml
+++ b/app/src/main/res/layout/item_chatroomlist.xml
@@ -13,7 +13,7 @@
         android:id="@+id/circleView"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/icon_user"
+        android:src="@drawable/profile_icon_pink"
         app:civ_border_overlay="true"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/pink"
@@ -49,9 +49,11 @@
     <!--사용자를 구분해주는 선-->
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="0.8dp"
         android:layout_below="@id/circleView"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@color/textColor" />
 
 </RelativeLayout>
