--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -5,12 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/commentName"
             android:layout_width="wrap_content"
@@ -36,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="댓글내용"
+        android:layout_marginLeft="15dp"
         android:textColor="@color/textColor"
         android:textSize="15sp" />
 
@@ -44,14 +44,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="시간"
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
         android:textColor="@color/textColor"
         android:textSize="12sp" />
 
     <!--사용자를 구분해주는 선-->
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@color/textColor" />
 
 </LinearLayout>
