--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,5 +4,8 @@
                 <item name="android:statusBarColor">@color/black</item>
     </style>
 
+    <style name="dialogTheme_1" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">@color/pink</item>
+    </style>
 
 </resources>
