--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,21 @@
             android:background="@color/white"
             android:padding="5dp">
                 <ImageView
+                    android:id="@+id/logoImage"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
                     android:src="@drawable/logo_77"/>
+                <TextView
+                    android:id="@+id/profileText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:paddingLeft="10dp"
+                    android:text="내 프로필 💗"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:visibility="gone"/>
                 <ImageButton
                     android:id="@+id/btnLogout"
                     android:layout_width="30dp"
