밸런스게임, 댓글에 선택사항 보이도록 기능보완

--- a/app/src/main/res/layout/activity_balance_game.xml
+++ b/app/src/main/res/layout/activity_balance_game.xml
@@ -115,6 +115,13 @@
                 android:textSize="15dp"
                 android:layout_marginBottom="10dp"/>
             <TextView
+                android:id="@+id/voteMySelect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="내 선택"
+                android:layout_marginBottom="10dp"/>
+            <TextView
                 android:id="@+id/voteContent1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
