--- a/app/src/main/res/layout/activity_balance_game.xml
+++ b/app/src/main/res/layout/activity_balance_game.xml
@@ -69,14 +69,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#80E4E4E4"
-            android:padding="30dp"
+            android:padding="25dp"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:visibility="visible">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="3dp"
                 android:text="투표를 하면 결과 확인이 가능해요!" />
             <Button
                 android:id="@+id/voteBtn1"
@@ -84,13 +85,12 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/textColor"
                 android:textColor="@color/white"
-                android:layout_marginBottom="5dp"
                 android:text="항목1" />
             <Button
                 android:id="@+id/voteBtn2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="3dp"
                 android:backgroundTint="@color/textColor"
                 android:textColor="@color/white"
                 android:text="항목2" />
@@ -105,22 +105,15 @@
             android:background="#80E4E4E4"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="30dp"
+            android:padding="25dp"
             android:visibility="gone">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="💗 투표결과 💗"
                 android:textStyle="bold"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/voteMySelect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="내 선택"
-                android:layout_marginBottom="10dp"/>
+                android:textSize="18dp"
+                android:layout_marginBottom="15dp"/>
             <TextView
                 android:id="@+id/voteContent1"
                 android:layout_width="wrap_content"
@@ -129,7 +122,8 @@
                 android:text="항목1"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
                 <TextView
                     android:id="@+id/voteCount1"
                     android:layout_width="wrap_content"
@@ -155,7 +149,8 @@
                 android:text="항목2"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
                 <TextView
                     android:id="@+id/voteCount2"
                     android:layout_width="wrap_content"
@@ -175,7 +170,16 @@
                 android:id="@+id/voteCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:text="👤"
+                android:layout_gravity="right"/>
+            <TextView
+                android:id="@+id/voteMySelect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/pink_"
+                android:text="내 선택"
                 android:layout_gravity="right"/>
         </LinearLayout>
     </LinearLayout>
@@ -226,7 +230,11 @@
             android:layout_height="50dp"
             android:layout_weight="9"
             android:paddingStart="8dp"
+            android:textColorHighlight="@color/pink"
+            android:textSelectHandle="@color/pink"
+            android:textCursorDrawable="@color/pink_"
             android:background="@android:color/transparent"
+            android:textColor="@color/textColor"
             android:hint="댓글을 입력하세요." />
         <ImageButton
             android:id="@+id/btnSend"
