--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -84,6 +84,10 @@
             android:layout_height="50dp"
             android:layout_weight="9"
             android:paddingStart="8dp"
+            android:textColorHighlight="@color/pink"
+            android:textSelectHandle="@color/pink"
+            android:textCursorDrawable="@color/pink_"
+            android:textColor="@color/textColor"
             android:background="@android:color/transparent"
             android:hint="메세지를 입력하세요."/>
         <ImageButton
