--- a/app/src/main/res/layout/item_comments.xml
+++ b/app/src/main/res/layout/item_comments.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:paddingTop="8dp"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="이름"
             android:textColor="@color/textColor"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/commentSelectedBtn"
@@ -24,8 +26,9 @@
             android:layout_height="wrap_content"
             android:text="선택내용"
             android:textColor="@color/textColor"
-            android:textSize="15sp"
-            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/commentName" />
         <ImageButton
             android:id="@+id/btnCommentRemove"
@@ -44,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="댓글내용"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="15dp"
         android:textColor="@color/textColor"
         android:textSize="15sp" />
@@ -54,6 +58,7 @@
         android:layout_height="wrap_content"
         android:text="시간"
         android:layout_gravity="right"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:textColor="@color/textColor"
         android:textSize="12sp" />
