밸겜 여백 조절

--- a/app/src/main/res/layout/activity_balance_add.xml
+++ b/app/src/main/res/layout/activity_balance_add.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:backgroundTint="@color/pink"
-        android:textColor="@color/black"
+        android:textColor="@color/textColor"
         android:text="밸런스게임 생성하기"/>
 
 </RelativeLayout>
