--- a/app/src/main/res/layout/activity_balance_game.xml
+++ b/app/src/main/res/layout/activity_balance_game.xml
@@ -18,15 +18,15 @@
         <!-- 게시자 사진, 이름, 게시물 작성시간 -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/balanceImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginRight="5dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="8dp"
                 android:src="@drawable/icon_user"
                 app:civ_border_color="@color/pink"
                 app:civ_border_width="2dp" />
@@ -38,7 +38,7 @@
                 android:layout_toRightOf="@id/balanceImage"
                 android:text="이름"
                 android:textColor="@color/textColor"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/balanceTime"
@@ -49,16 +49,17 @@
                 android:text="작성시간"
                 android:layout_marginRight="10dp"
                 android:textColor="@color/textColor"
-                android:textSize="15sp" />
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <!-- 밸런스게임 타이틀 -->
         <TextView
             android:id="@+id/balanceTitle"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="10dp"
+            android:layout_marginLeft="8dp"
             android:text="밸겜 타이틀"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -105,7 +106,10 @@
             android:background="#80E4E4E4"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="25dp"
+            android:paddingTop="20dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:paddingBottom="20dp"
             android:visibility="gone">
             <TextView
                 android:layout_width="match_parent"
@@ -118,11 +122,14 @@
                 android:id="@+id/voteContent1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:textStyle="bold"
                 android:text="항목1"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
                 <TextView
                     android:id="@+id/voteCount1"
@@ -146,10 +153,13 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="항목2"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
                 <TextView
                     android:id="@+id/voteCount2"
