--- a/app/src/main/res/layout/activity_balance_add.xml
+++ b/app/src/main/res/layout/activity_balance_add.xml
@@ -24,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="내용"
-            android:paddingStart="10dp"
-            android:backgroundTint="@color/textColor"
+            android:theme="@style/editTextTheme"
             android:layout_marginBottom="20dp"/>
 
         <TextView
@@ -38,8 +37,7 @@
             android:id="@+id/editBalance2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/textColor"
-            android:paddingStart="10dp"
+            android:theme="@style/editTextTheme"
             android:hint="내용"/>
     </LinearLayout>
 
