--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -83,11 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="9"
-            android:paddingStart="8dp"
-            android:textColorHighlight="@color/pink"
-            android:textSelectHandle="@color/pink"
-            android:textCursorDrawable="@color/pink_"
-            android:textColor="@color/textColor"
+            android:theme="@style/editTextTheme"
             android:background="@android:color/transparent"
             android:hint="메세지를 입력하세요."/>
         <ImageButton
