--- a/app/src/main/res/layout/activity_data_add.xml
+++ b/app/src/main/res/layout/activity_data_add.xml
@@ -37,6 +37,7 @@
             android:id="@+id/editAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/editTextTheme"
             android:hint="내용"/>
     </LinearLayout>
 
