--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:background="@drawable/login_border"
         android:paddingStart="20dp"
         android:drawablePadding="10dp"
+        android:theme="@style/editTextTheme"
         android:layout_marginBottom="20dp"
         android:hint="email"/>
     <EditText
@@ -38,6 +39,7 @@
         android:paddingStart="20dp"
         android:drawablePadding="10dp"
         android:layout_marginBottom="20dp"
+        android:theme="@style/editTextTheme"
         android:hint="password"/>
     <LinearLayout
         android:layout_width="wrap_content"
