--- a/app/src/main/res/layout/item_balance_game_list.xml
+++ b/app/src/main/res/layout/item_balance_game_list.xml
@@ -11,7 +11,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="3dp">
@@ -19,7 +18,7 @@
             android:id="@+id/balanceImage"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/icon_user"
+            android:src="@drawable/profile_icon_pink"
             app:civ_border_width="2dp"
             app:civ_border_color="@color/pink"
             android:layout_marginRight="8dp"/>
