--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/rootLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -48,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:layout_above="@id/fabSimpleChat"
+        android:layout_above="@id/input_layout"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/pink"
@@ -56,16 +57,16 @@
         android:textColor="#7A7A7A"
         android:src="@android:drawable/ic_input_add" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/fabSimpleChat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/input_layout"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:text="간편채팅"
-        android:backgroundTint="@color/pink"
-        app:icon="@drawable/chat_icon_2" />
+<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
+<!--        android:id="@+id/fabSimpleChat"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@id/input_layout"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:text="간편채팅"-->
+<!--        android:backgroundTint="@color/pink"-->
+<!--        app:icon="@drawable/chat_icon_2" />-->
 
     <LinearLayout
         android:id="@+id/input_layout"
@@ -78,11 +79,19 @@
         android:drawablePadding="10dp"
         android:paddingEnd="20dp"
         android:gravity="center">
+        <ImageButton
+            android:id="@+id/btnSimpleChat"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/icon_simple_chat"
+            android:scaleType="fitCenter" />
         <EditText
             android:id="@+id/message_edit"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_weight="9"
+            android:layout_weight="8"
             android:theme="@style/editTextTheme"
             android:background="@android:color/transparent"
             android:hint="메세지를 입력하세요."/>
