--- a/app/src/main/res/layout/fragment_meme.xml
+++ b/app/src/main/res/layout/fragment_meme.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:iconifiedByDefault="false"
+        app:queryBackground="@null"
+        android:layout_marginLeft="-8dp"
         app:queryHint="Search" />
 
     <androidx.recyclerview.widget.RecyclerView
